--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -64,4 +64,20 @@
         android:layout_marginBottom="16dp"
         android:elevation="2dp"/>
 
+
+    <!-- Button to open Logbook -->
+    <Button
+        android:id="@+id/buttonLogbook"
+        android:text="Logbook"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAllCaps="false"
+        android:textSize="16sp"
+        android:padding="12dp"
+        android:textColor="#FFFFFF"
+        android:backgroundTint="#00B894"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="16dp"
+        android:elevation="2dp"/>
+
 </LinearLayout>
