--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -61,10 +61,10 @@
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_gravity="center"
         app:layout_constraintTop_toBottomOf="@+id/cardView2">
 
         <LinearLayout
@@ -72,50 +72,48 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <!-- Email Input -->
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="300dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/activity_horizontal_margin"
-                android:layout_gravity="center_horizontal">
+                android:layout_marginHorizontal="32dp"
+                app:hintTextColor="?android:attr/textColorHint"
+                app:boxStrokeColor="?attr/colorControlActivated"
+                app:boxStrokeErrorColor="@color/colorRed"
+                app:hintEnabled="true">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/Email"
-                    android:layout_width="300dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginBottom="12dp"
-                    android:autofillHints=""
-                    android:ems="10"
-                    android:focusable="auto"
-                    android:hint="@string/email"
-                    android:inputType="textEmailAddress"
-                    android:paddingHorizontal="16dp"
-                    android:textStyle="normal" />
+                    android:hint="Email"
+                    android:textColor="?android:attr/textColorPrimary" />
             </com.google.android.material.textfield.TextInputLayout>
 
+            <!-- Password Input -->
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="300dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                app:passwordToggleEnabled="true">
+                android:layout_marginHorizontal="32dp"
+                app:passwordToggleEnabled="true"
+                app:boxStrokeColor="?attr/colorControlNormal"
+                app:hintTextColor="?android:attr/textColorHint">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/password"
-                    android:layout_width="300dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
-                    android:autofillHints=""
-                    android:ems="10"
-                    android:focusable="auto"
                     android:hint="@string/password"
                     android:inputType="textPassword"
+                    android:textColor="?android:attr/textColorPrimary"
+                    android:textColorHint="?android:attr/textColorHint"
                     android:textStyle="normal" />
-
             </com.google.android.material.textfield.TextInputLayout>
 
+
+            <!-- Login Button -->
             <Button
                 android:id="@+id/loginBtn"
                 android:layout_width="200dp"
@@ -129,6 +127,7 @@
                 android:textColor="@color/white"
                 app:cornerRadius="24dp" />
 
+            <!-- Register Button -->
             <Button
                 android:id="@+id/loginRegisterBtn"
                 android:layout_width="200dp"
@@ -141,18 +140,13 @@
                 android:textColor="@color/white"
                 app:cornerRadius="24dp" />
 
+            <!-- Google Sign-In -->
             <com.google.android.gms.common.SignInButton
                 android:id="@+id/loginGoogleBtn"
                 android:layout_width="200dp"
                 android:layout_height="60dp"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="16dp"
-                android:backgroundTint="@color/TG_blue"
-                android:fontFamily="@font/poppins_bold"
-                android:text="@string/login_google_btn"
-                android:textAllCaps="false"
-                android:textColor="@color/white"
-                app:cornerRadius="24dp" />
+                android:layout_marginTop="16dp" />
 
             <TextView
                 android:id="@+id/forgotPassword"
@@ -172,7 +166,6 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="16dp"
                 android:visibility="invisible" />
-
 
         </LinearLayout>
     </ScrollView>
