--- a/app/src/main/res/layout/login_enter_pin.xml
+++ b/app/src/main/res/layout/login_enter_pin.xml
@@ -111,7 +111,9 @@
                     android:gravity="center"
                     android:inputType="number"
                     android:maxLength="1"
-                    android:textColor="@android:color/darker_gray" />
+                    android:textColor="?attr/colorOnBackground"
+                    android:textColorHint="?attr/colorOnSurfaceVariant"
+                    android:importantForAutofill="no" />
 
                 <EditText
                     android:id="@+id/pin_digit_2"
