--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,13 +1,38 @@
-<resources>
+<!-- values-night/themes.xml (Dark theme) -->
+<resources xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- Dark mode theme -->
-    <style name="Theme.TeamGuardians" parent="Theme.AppCompat.NoActionBar">
-        <item name="colorPrimary">@color/dark_primary_color</item>
-        <item name="colorPrimaryVariant">@color/dark_primary_variant_color</item>
-        <item name="colorOnPrimary">@color/dark_primary_color</item>
-        <!-- Customize other dark mode attributes here -->
-        <item name="android:fontFamily">@font/poppins</item>
-        <item name="android:textColorPrimary">@color/white</item>
+    <style name="Theme.GopherGuardian" parent="Theme.Material3.DayNight.NoActionBar">
+        <!-- Primary brand color -->
+        <item name="colorPrimary">@color/primary_dark</item>
+        <item name="colorPrimaryVariant">@color/primary_variant_dark</item>
+        <item name="colorOnPrimary">@color/on_primary_dark</item>
+
+        <!-- Secondary -->
+        <item name="colorSecondary">@color/secondary_dark</item>
+        <item name="colorSecondaryVariant">@color/secondary_variant_dark</item>
+        <item name="colorOnSecondary">@color/on_secondary_dark</item>
+
+        <!-- Backgrounds -->
+        <item name="android:colorBackground">@color/background_dark</item>
+        <item name="colorOnBackground">@color/on_background_dark</item>
+
+        <!-- Surfaces -->
+        <item name="colorSurface">@color/surface_dark</item>
+        <item name="colorOnSurface">@color/on_surface_dark</item>
+
+        <!-- Control colors -->
+        <item name="colorControlNormal">@color/on_surface_variant_dark</item>
+        <item name="colorControlActivated">@color/primary_dark</item>
+        <item name="colorControlHighlight">@color/primary_variant_dark</item>
+
+        <!-- Text -->
+        <item name="android:textColorPrimary">@color/on_background_dark</item>
+        <item name="android:textColorSecondary">@color/on_surface_variant_dark</item>
+        <item name="android:textColorHint">@color/on_surface_variant_dark</item>
+
+        <!-- Material Components -->
+        <item name="materialAlertDialogTheme">@style/ThemeOverlay.Material3.MaterialAlertDialog</item>
+        <item name="materialCardViewStyle">@style/Widget.Material3.CardView.Filled</item>
+        <item name="textInputStyle">@style/Widget.Material3.TextInputLayout.OutlinedBox</item>
     </style>
-
 </resources>
